--- a/style.css
+++ b/style.css
@@ -144,3 +144,20 @@ nav a::before {
 nav a:hover::before {
     width: 100%;
 }
+
+::-webkit-scrollbar {
+    width: 1em;
+}
+
+::-webkit-scrollbar-track {
+    background: #15181a;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #090b0c;
+    border-radius: 100vw;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #020303;
+}
